# frbe-tools

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  frbe_tools.code-workspace  pyproject.toml
.github/workflows/: ci.yml
src/frbe_tools/: __init__.py  __main__.py  cli.py  config.py
src/frbe_tools/analysis/: __init__.py  rankings.py
src/frbe_tools/api/: __init__.py  client.py  clubs.py  models.py
src/frbe_tools/commands/: __init__.py  analyze.py  clubs.py  db.py  scrape.py  web.py
src/frbe_tools/db/: __init__.py  store.py
src/frbe_tools/sources/: __init__.py  website.py
src/frbe_tools/web/: __init__.py  app.py
src/frbe_tools/web/static/: app.css  app.js
src/frbe_tools/web/templates/: _table.html  base.html  club_history.html  clubs.html  distribution.html  error.html  growth.html  index.html  movers.html  player.html  retention.html  strength.html
tests/: test_clubs.py  test_config.py  test_rankings.py  test_scrape.py  test_store.py  test_web.py
